Wrong value when starting a transform (before moving the mouse) #110722

Closed
opened 2023-08-02 17:06:06 +02:00 by Hjalti Hjálmarsson · 1 comment

System Information
Operating system: Linux-6.4.6-gentoo-x86_64-11th_Gen_Intel-R-_Core-TM-i9-11900K@_3.50GHz-with-glibc2.37 64 Bits, X11 UI
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.86.05

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-01 22:19, hash: b54bca9f081b
Worked: (newest version of Blender that worked as expected)

Short description of error
Using trackball , without moving mouse makes the object to go into a bizarre rotation with weird values, until you move the mouse and then it snaps back and behaves as expected

@JulienKaspar suggested that this might be related to stuff that @mano-wii has been working on

Exact steps for others to reproduce the error

  • New file
  • Create a Suzanne head
  • Select it
  • Hit "R" twice to enter the trackball function, but don't move your mouse
**System Information** Operating system: Linux-6.4.6-gentoo-x86_64-11th_Gen_Intel-R-_Core-TM-_i9-11900K_@_3.50GHz-with-glibc2.37 64 Bits, X11 UI Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.86.05 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-01 22:19, hash: `b54bca9f081b` Worked: (newest version of Blender that worked as expected) **Short description of error** Using trackball , without moving mouse makes the object to go into a bizarre rotation with weird values, until you move the mouse and then it snaps back and behaves as expected @JulienKaspar suggested that this might be related to stuff that @mano-wii has been working on **Exact steps for others to reproduce the error** - New file - Create a Suzanne head - Select it - Hit "R" twice to enter the trackball function, but don't move your mouse
Hjalti Hjálmarsson added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-02 17:06:07 +02:00
Iliya Katushenock added the
Interest
User Interface
label 2023-08-02 17:20:37 +02:00

Caused by 5ed14e9269.

That commit accidentally removed the copy_v2_v2_int(t->mval, mval);
line which was responsible for initializing the value of mval.

Fix in progress.

Caused by 5ed14e9269. That commit accidentally removed the `copy_v2_v2_int(t->mval, mval);` line which was responsible for initializing the value of `mval`. Fix in progress.
Germano Cavalcante changed title from Trackball broken when activated (before moving the mouse) to Wrong value when starting a transform (before moving the mouse) 2023-08-02 20:51:31 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-02 20:52:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110722
No description provided.